Development Portal (2021-04-22 shi)
==============================
Fix Print-friendly css for SAVi in document-link span


Development Portal (2021-04-20 shi)
==============================
Add transaction search for default filters


Development Portal (2021-03-27 shi)
==============================
Update codelists for dflat


Development Portal (2021-03-09 shi)
==============================
Fix closing tags dpreview


Development Portal (2021-03-02 shi)
==============================
Add blog post link dpreview
Update dpreview import banner
Update dpreview footer link and text
Update main and print-friendly css


Development Portal (2021-02-29 shi)
==============================
Update dpreview upload
Update css
Add link to news post
Add icon to dpreview upload
Fixed mobile site


Development Portal (2021-02-26 shi)
==============================
Added dpreview chunks
Updated dpreview footer css
Updated dpreview footer Print-Friendly css
Updated SAVi css for other-identifier code


Development Portal (2021-02-25 shi)
==============================
Add Glossary button to search section on all pages
Update Year Range glossary description
Added link to Year Range reference
Update css
Update Print-Friendly and all theme css


Development Portal (2021-02-10 shi)
==============================
Fix rgba views for Generator


Development Portal (2021-01-25 shi)
==============================
Update dash css


Development Portal (2021-01-22 shi)
==============================
Fix cron layout
Update dash css


Development Portal (2021-01-20 shi)
==============================
Update text for Quick search
Update sector vocabulary filter


Development Portal (2021-01-18 shi)
==============================
Search 2 update filter sector vocabulary
Update glossary


Development Portal (2020-09-18 shi)
==============================
Search 2 update filter budget, planned disbursement and activity scope


Development Portal (2020-09-16 shi)
==============================