@@ -199,8 +199,8 @@ span.doc_rec	{background-color:rgba(22,24,37,0.6);}
 
 /*	ACTIVITY STATUS	*/
 .wrap_activity_status		{background-color:#fff; color:#444; font-size:16px; margin-left:-40px; padding:20px 0; text-align:center; width:960px;}
-.wrap_activity_status span	{font-size:14px; font-weight:bold; text-transform:uppercase;}
-.status_desc				{font-size:14px; margin:0 auto; padding-top:5px; width:500px;}
+.wrap_activity_status span	{font-size:13px; font-weight:bold; text-transform:uppercase;}
+.status_desc				{font-size:12px; margin:0 auto; padding-top:5px;}
 
 /*	TABLES	*/
 td .currency	{color:#ccc; font-size:10px; line-height:12px;}
