@@ -437,7 +437,7 @@
 
 #^/wrap-activity-status	<!--	ACTIVITY STATUS WRAPPER	-->
 	<div class="wrap_activity_status">
-		<span>activity status:</span> {_it./activity-status@code-name||}
+		<span>activity status: {_it./activity-status@code-name||}</span>
 		<div class="status_desc">{_it./activity-status@code-description||/empty-description}</div>
 	</div>
 
