@@ -1,3 +1,8 @@
+Development Portal (2021-04-25 shi)
+==============================
+Update css for SAVi activity status
+
+
 Development Portal (2021-04-22 shi)
 ==============================
 Fix Print-friendly css for SAVi in document-link span
